--- a/about.html
+++ b/about.html
@@ -31,6 +31,9 @@
               <a class="nav-link" href="/home">Home</a>
              </li>
              <li class="nav-item">
+              <a class="nav-link" href="#learn">Learn</a>
+             </li>
+             <li class="nav-item">
                <a class="nav-link" href="about.html">About</a>
              </li>
              <li class="nav-item">
