--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
             </div>
             <div class="col-lg-4 col-sm-6 feature d-flex">
                <div class="icon-box me-3">
-                  <i class="bx bx-check"></i>
+                  <i class="material-symbols:check-circle-outline"></i>
                </div>
                <div>
                   <h5 class="title-sm">2023</h5>
@@ -187,7 +187,7 @@
             </div>
             <div class="col-lg-4 col-sm-6 feature d-flex">
                <div class="icon-box me-3">
-                  <i class="bx bx-check"></i>
+                  <i class="material-symbols:check-circle-outline"></i>
                </div>
                <div>
                   <h5 class="title-sm">2024</h5>
