--- a/index.html
+++ b/index.html
@@ -234,9 +234,9 @@
       </div>
    </section>
  
-   <div class="grid">
-      <div class="grid-item">
-        <div class="card">
+   <section id="grid" class="row g-0 py-0">
+      <div class="col-lg-4 col-sm-6">
+         <div class="card-item">
           <img class="card-img" src="./img/rome.jpg" alt="Rome" />
           <div class="card-content">
             <h1 class="card-header">Rome</h1>
@@ -250,6 +250,7 @@
         </div>
       </div>
    </div>
+   </section>
         
    <section id="testimonials" class="text-center">
       <div class="container">
