--- a/index.html
+++ b/index.html
@@ -249,7 +249,34 @@
           </div>
         </div>
       </div>
-   </div>
+      <div class="col-lg-4 col-sm-6">
+         <div class="card-item">
+          <img class="card-img" src="./img/grand-canyon.jpg" alt="Grand Canyon" />
+          <div class="card-content">
+            <h1 class="card-header">Rome</h1>
+            <p class="card-text">
+              Rome is known for its stunning <strong> architecture</strong>,
+              with the Colleseum, Pantheon, and Trevi Fountain as the main
+              attractions.
+            </p>
+            <button class="card-btn">Visit <span>&rarr;</span></button>
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-4 col-sm-6">
+         <div class="card-item">
+          <img class="card-img" src="./img/maldives.jpg" alt="Maldoves" />
+          <div class="card-content">
+            <h1 class="card-header">Rome</h1>
+            <p class="card-text">
+              Rome is known for its stunning <strong> architecture</strong>,
+              with the Colleseum, Pantheon, and Trevi Fountain as the main
+              attractions.
+            </p>
+            <button class="card-btn">Visit <span>&rarr;</span></button>
+          </div>
+        </div>
+      </div>
    </section>
         
    <section id="testimonials" class="text-center">
