--- a/index.html
+++ b/index.html
@@ -149,6 +149,18 @@
          </div>
       </div>
    </section>
+        
+  <section id="learn">
+      <div class="container text-center">
+         <div class="row justify-content-center">
+            <div class="col-md-10">
+               <h1 class="text-white display-4">LEARN NOW WITH US</h1>
+               <p class="text-white">Simple introduction to learn cybersecurity</p>
+               <a href="learn.html" class="btn btn-brand">Learn Now</a>
+            </div>
+         </div>
+      </div>
+   </section>
     
    <section id="roadmap">
       <div class="container">
