--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
               <a class="nav-link" href="#home">Home</a>
              </li>
              <li class="nav-item">
-               <a class="nav-link" href="#portfolio">Portfolio</a>
+               <a class="nav-link" href="#project">Project</a>
              </li>
              <li class="nav-item">
                <a class="nav-link" href="#roadmap">Roadmap</a>
@@ -58,8 +58,19 @@
          </div>
       </div>
    </section>
-    
-   <section id="portfolio" class="row g-0 py-0">
+        
+   <section id="project" class="row g-0 py-0">
+       <div class="col-lg-4 col-sm-6">
+         <div class="portfolio-item">
+           <a href="learn.html"><img src="img/hero_img.jpg" alt=""></a>
+               <div class="portfolio-overlay">
+                  <div>
+                     <h3>Jom Belajar Hack (Intermediate)</h3>
+                     <h6>Start at 4th March 2023</h6>
+                  </div>
+               </div>
+         </div>
+      </div>
       <div class="col-lg-4 col-sm-6">
          <div class="portfolio-item">
                <img src="img/p1.png" alt="">
@@ -212,26 +223,17 @@
          </div>
       <div class="container">
          <div class="row gy-4">
-            <div class="col-lg-2 col-md-3 col-6">
-              <a href="learn.html"><img src="img/hero_img.jpg" alt=""></a>
-            </div>
-            <div class="col-lg-2 col-md-3 col-6">
+            <div class="col-lg-2 col-md-3 col-4">
                <img src="img/logo1.svg" alt="">
             </div>
-            <div class="col-lg-2 col-md-3 col-6">
+            <div class="col-lg-2 col-md-3 col-4">
                <img src="img/logo2.svg" alt="">
             </div>
-            <div class="col-lg-2 col-md-3 col-6">
+            <div class="col-lg-2 col-md-3 col-4">
                <img src="img/logo3.svg" alt="">
             </div>
-            <div class="col-lg-2 col-md-3 col-6">
+            <div class="col-lg-2 col-md-3 col-4">
                <img src="img/logo4.svg" alt="">
-            </div>
-            <div class="col-lg-2 col-md-3 col-6">
-               <img src="img/logo2.svg" alt="">
-            </div>
-            <div class="col-lg-2 col-md-3 col-6">
-               <img src="img/logo2.svg" alt="">
             </div>
          </div>
       </div>
