--- a/about.html
+++ b/about.html
@@ -31,7 +31,7 @@
               <a class="nav-link" href="/home">Home</a>
              </li>
              <li class="nav-item">
-               <a class="nav-link" href="/portfolio">Portfolio</a>
+               <a class="nav-link" href="/project">Project</a>
              </li>
              <li class="nav-item">
                <a class="nav-link" href="/roadmap">Roadmap</a>
