--- a/index.html
+++ b/index.html
@@ -62,11 +62,11 @@
    <section id="project" class="row g-0 py-0">
        <div class="col-lg-4 col-sm-6">
          <div class="portfolio-item">
-           <a href="learn.html" class="btn btn-brand"></a><img src="img/hero_img.jpg" alt="">
+           <img src="img/hero_img.jpg" alt="">
                <div class="portfolio-overlay">
                   <div>
-                     <h3>Jom Belajar Hack (Intermediate)</h3>
-                     <h6>Start at 4th March 2023</h6>
+                     <h3>Introduction to Cybersecurity</h3>
+                     <h6>LEARN NOW</h6>
                   </div>
                </div>
          </div>
